apps/oneuptime/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oneuptime
  namespace: oneuptime
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.kubernetes.io/hostname: oneuptime.bacherik.de,status.bacherik.de
    traefik.ingress.kubernetes.io/router.middlewares: traefik-default-headers@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: oneuptime.bacherik.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oneuptime-nginx
                port:
                  number: 80
    - host: status.bacherik.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oneuptime-nginx
                port:
                  number: 80
  tls:
    - hosts:
        - oneuptime.bacherik.de
        - status.bacherik.de
      secretName: oneuptime-tls
